--- a/demo/package.json
+++ b/demo/package.json
@@ -10,10 +10,13 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "aosx": "^1.0.11",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
