--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "aosx",
-  "version": "1.0.0",
+  "version": "1.0.12",
   "homepage": "https://github.com/thestarsend/aosx",
   "description": "Action on scroll (I Observer)",
-  "main": "index.js",
+  "main": "dist/aosx.mjs",
   "scripts": {
     "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
